--- a/ui/style.css
+++ b/ui/style.css
@@ -1,14 +1,13 @@
 body {
     font-family: sans-serif;
-    background-color: lightgrey;
-    margin-top: 75px;
+    background-color: rgb(255, 255, 35);
+    margin-top: 50px;
 }
 
 
 .container {
     margin: 0 auto;
     max-width: 800px;
-    padding: 50px;
 }
 
 .center {
