--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: rgb(255, 255, 35);
+    background-color: rgba(173, 173, 106, 1);
     margin-top: 50px;
 }
 
