--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-color: rgba(173, 173, 106, 1);
+    background-color: #adad6a;
     margin-top: 50px;
 }
 
@@ -8,6 +8,8 @@ body {
 .container {
     margin: 0 auto;
     max-width: 800px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .center {
